app/assets/stylesheets/odi-bootstrap.css
/* ... */
.container.about .span8 ul.kitemarks li.kitemark3 {
  background: url(//assets.theodi.org/img/badges/standard_level_badge.png) no-repeat top left;
  background-size: 65px;
}

.container.about .span8 ul.kitemarks li.kitemark4 {
  background: url(//assets.theodi.org/img/badges/exemplar_level_badge.png) no-repeat top left;
  background-size: 65px;
}

/*
//
// ***** Terms Page, Contact (Get in touch) Page *****
//
*/

.container.terms .span8,
.container.contact .span8 {
  margin-left: 0;
}

.container.terms .span8 h2,
.container.contact .span8 h2 {
  margin-top: 15px;
  font-size: 30px;
  font-weight: normal;
  color: #8e8c8c;
}

.container.terms .span8 h4,
.container.contact .span8 h4 {
  font-size: 18px;
  color: #000;
}

.container.terms .span8 li,
.container.contact .span8 li {
  margin-bottom: 5px;
  line-height: 24px;
}

/*
//
// ***** Improvements page *****
//
*/

section.improvement header .container {
  background-position: 20px 5px;
  background-repeat: no-repeat;
  background-size: 71px 63px;
}

section.improvement h2 {
  padding-left: 100px;
  margin: 0;
  font-size: 27px;
}

section.improvement h3 {
  max-width: 90%;
  padding-left: 100px;
  margin: 0 0 15px 0;
  line-height: 20px;
}

section.improvement .requirements {
  padding: 25px 0 35px 0;
}

section.improvement li {
  width: 66%;
  margin-bottom: 20px;
  font-size: 16px;
  color: #4d4d4d;
}

section.improvement strong {
  color: #000;
}

section.improvement a {
  color: #000;
}

section.improvement p {
  margin-bottom: 20px;
}

section.improvement.improvement-pilot header .container {
  background-image: url(//assets.theodi.org/img/badges/pilot_level_badge.png);
}

section.improvement.improvement-standard header .container {
  background-image: url(//assets.theodi.org/img/badges/standard_level_badge.png);
}

section.improvement.improvement-exemplar header .container {
  background-image: url(//assets.theodi.org/img/badges/exemplar_level_badge.png);
}

section.improvement.improvement-basic {
  background: #474747;
}

section.improvement.improvement-basic header {
  background: #333;
}

section.improvement.improvement-basic header h2,
section.improvement.improvement-basic header h3 {
  padding-left: 0;
}

section.improvement.improvement-basic li,
section.improvement.improvement-basic p {
  -webkit-font-smoothing: antialiased;
  color: #fff;
}

section.improvement.improvement-basic strong,
section.improvement.improvement-basic a {
  color: #fff;
}

.navbar-inverse {
  background-color: #1b1b1b;
  border-color: #010101;
}

.navbar-inverse .navbar-nav > li > a {
  color: #fff;
  padding-left: 20px;
}

.navbar-inverse .navbar-nav > li > a:hover,
.navbar-inverse .navbar-nav > li > a:focus {
  color: #fff;
  background-color: #ff6700;
}

.mobile-only {
  display: none;
}

.mobile-only .container {
  margin-left: 0;
}

.mobile-only ul {
  width: 100%;
}

.mobile-only .nav > li {
  float: none;
}

#mobile-menu {
  display: none;
}

/* form fields */
@media (max-width: 375px) {
  .main-default input[type="text"],
  .main-default input[type="email"],
  .main-default input[type="password"],
  .main-default textarea {
    width: 96%;
  }

  .main-default select {
    width: 100%;
  }
}

@media (max-width: 767px) {

  .mobile-only {
    display: block;
  }

  #mobile-menu {
    display: block;
    position: absolute;
    top: 10px;
    right: 15px;
  }

  .nav-collapse {
    margin: 0px -20px;
    height: 0;
  }

  .nav-collapse.collapse.in {
    overflow: visible;
  }

  .nav-collapse .navbar .nav {
    float: left;
    width: 100%;
    margin-bottom: 0;
  }

  #mainnav .navbar-inner li {
    padding: 0 20px;
  }

  #mainnav .navbar-inner li a:hover {
    color: #fff;
    background-color: #ff6700;
  }

  #mainnav .navbar-inner li a,
  #mainnav .navbar-inner li button {
    border-radius: 0;
    text-shadow: none;
    font-weight: normal;
    margin-bottom: 0;
    background: #1b1b1b;
    color: #fff;
    padding-top: 7px;
    padding-bottom: 8px;
  }

  #mainnav .navbar-inner li a .caret {
    border-top-color: #428bca;
    border-bottom-color: #428bca;
  }

  #topbar.navbar-inverse,
  #topbar.navbar-inverse .navbar-inner {
    height: 80px;
  }

  #topbar .navbar-inner .pull-right {
    float: none;
    display: block;
    margin-top: 60px;
  }

  #topbar .navbar-inner ul li {
    display: none;
    background-color: purple;
    float: none;
    height: auto;
  }
}

@media (max-width: 767px) {
  #topbar {
    height: 100px;
  }
  #topbar .navbar-inner {
    height: 100px;
  }
  #topbar .navbar-inner h1 {
    top: auto;
    bottom: 0;
    left: 20px;
    font-size: 27px;
  }
  #topbar .navbar-inner .brand {
    left: 20px;
  }
  header {
    padding-left: 20px;
  }
  p.logo {
    display: none;
  }
  #login,
  #register {
    width: 335px;
  }
  #login input[type="text"],
  #register input[type="text"],
  #login input[type="email"],
  #register input[type="email"],
  #login input[type="password"],
  #register input[type="password"] {
    width: 330px;
  }
  #start-cert-modal {
    width: 100%;
    margin-left: 0;
  }
  #start-cert-modal h1 {
    display: block;
    margin-bottom: 20px;
    clear: both;
  }
  .modal-body {
    padding-right: 20px;
    padding-left: 30px;
  }
  .modal-body .log-in {
    background: none;
  }
}

@media (max-width: 479px) {
  .odi-bleed .navbar .brand {
    padding-bottom: 18px;
  }
  .navbar-inverse .navbar-inner {
    border-bottom: 1px solid #707070;
  }
  .navbar .nav.pull-right {
    display: block;
    float: left;
    clear: both;
  }
  .certificate.hero-unit .btn-info {
    display: block;
    float: none;
    margin: -102px auto 8px;
    color: #00b7ff;
    background-color: #fff;
  }
  #register {
    left: -2px;
  }
  #login {
    left: -109px;
  }
}

@media (min-width: 480px) and (max-width: 767px) {

}
/* ... */

